[tool.poetry]
name = "isaac-dockerizer"
version = "0.1.0"
description = "Isaac dockerizing suite"
authors = ["Sungwoong Kim <sukim96@yonsei.ac.kr>"]
readme = "README.md"
packages = [{include = "isaac_dockerizer", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
